  SteppedComboBox bug fixed, requestFocus() overridden, if not then detail panels (as opposed to the root parent panel) with a editable combobox as the initialFocusComponent get the initial focus on application startup
  EntityApplicationPanel.getUser() changes from above reverted, found a way to launch Getdown application with the required arguments for authentication
  Foreach replaced with streams
  Clients.getUserCredentials() overridden with String[] args parameter, getAuthenticationToken(String[] args) added
  EntityApplicationPanel.getUser() improved using the above
  AbstractEntityConnectionProvider.initializeDomain() removed, domain initialized in doConnect()
  UiUtil.selectValue() and selectValues() overloaded with defaultSelection parameter
  SonarQube run
0.11.3
  Messages refactored into multiple class specific resource bundles
  EntityEditModel read only status linked to allowInsert, allowUpdate and allowDelete, related refactoring of DefaultEntityEditModel
  DefaultEntityEditModel, unnecessary string constants removed
  Sonar run
  FrameworkMessages refactored into multiple class specific resource bundles
  AbstractEntityConnectionProvider now sets the connectedState on connect and disconnect
  AbstractEntityConnectionProviderTest added
  All interfaces in package org.jminor.swing.common.model.table moved to org.jminor.common.model.table, related classes refactored
  Module org.jminor.framework.model-unittests removed, classes moved to test source path of module org.jminor.framework.model
  Resources folder contents split among relevant modules
  Gradle modules renamed to reflect artifact name
  IntelliJ Java code formatting
  EntityTableModel.getEntitiesByPropertyValue() removed, Entities.getEntitiesByValue() added as replacement
  FilteredTableModel.rowColumn() moved to RowColumn
  Some unit test improvements, continued
  TableSortModel.getSortingDirective() and getSortingPriority() replaced with getSortingState()