@@ -25,8 +25,8 @@ public interface TableSortModel<R, C, T> {
    * @param columnIdentifier the identifier of the column to sort by
    * @param directive the sorting directive
    * @param addColumnToSort if false then the sorting state is cleared, otherwise
-   * this column is added to the sorted column set according to {@code getSortingPriority()}
-   * @see #getSortingPriority(Object)
+   * this column is added to the sorted column set according to sorting priority
+   * @see #getSortingState(Object)
    */
   void setSortingDirective(final C columnIdentifier, final SortingDirective directive,
                            final boolean addColumnToSort);
